fix hide scrollbar in tiny textareas

--- a/mcww_web/css/layout.css
+++ b/mcww_web/css/layout.css
@@ -185,7 +185,7 @@ div:has(.mcww-tiny-element) {
         line-height: 18px;
         padding-top: 0px;
         padding-bottom: 0px;
-        overflow-y: hidden;
+        overflow-y: hidden !important;
     }
     span{
         margin-right: 5px;
